--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -9,9 +10,12 @@
   <title>Rio De Janeiro</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&family=Outfit:wght@100;200;300;400;500;600;700;800;900&family=Roboto+Slab:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
+  <link
+    href="https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&family=Outfit:wght@100;200;300;400;500;600;700;800;900&family=Roboto+Slab:wght@100;200;300;400;500;600;700;800;900&display=swap"
+    rel="stylesheet">
   <link rel="stylesheet" href="./css/style.css">
 </head>
+
 <body>
   <header class="header">
     <div class="header-content-container">
@@ -22,12 +26,12 @@
         <ul class="navigation-list">
           <li><a href="#">Home</a></li>
           <li><a href="#curiosidades">Curiosidades</a></li>
-          <li><a href="#">Vídeo</a></li>
+          <li><a href="#video">Vídeo</a></li>
         </ul>
       </nav>
     </div>
   </header>
-  <main class="main" >
+  <main class="main">
     <section id="home" class="home">
       <div class="content-home">
         <h1 class="title-home">Rio de Janeiro</h1>
@@ -36,7 +40,10 @@
     </section>
     <section id="curiosidades" class="curiosidades-container">
       <h2>Curiosidades</h2>
-      <p>O <span>Rio de Janeiro</span> é uma grande cidade brasileira à beira-mar, famosa pelas praias de Copacabana e Ipanema, pela estátua de 38 metros de altura do Cristo Redentor, no topo do Corcovado, e pelo Pão de Açúcar, um pico de granito com teleféricos até seu cume. A cidade também é conhecida pelas grandes favelas. O empolgante Carnaval, com carros alegóricos, fantasias extravagantes e sambistas, é considerado o maior do mundo.</p>
+      <p>O <span>Rio de Janeiro</span> é uma grande cidade brasileira à beira-mar, famosa pelas praias de Copacabana e
+        Ipanema, pela estátua de 38 metros de altura do Cristo Redentor, no topo do Corcovado, e pelo Pão de Açúcar, um
+        pico de granito com teleféricos até seu cume. A cidade também é conhecida pelas grandes favelas. O empolgante
+        Carnaval, com carros alegóricos, fantasias extravagantes e sambistas, é considerado o maior do mundo.</p>
       <div class="cards-container">
         <div class="card turismo">
           <h3>Pontos Turisticos</h3>
@@ -49,6 +56,42 @@
         </div>
       </div>
     </section>
-  </main> 
+    <section class="video" id="video">
+      <div class="video-container">
+
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/iqDP2kxPz2c" title="YouTube video player"
+          frameborder="0"
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+          allowfullscreen></iframe>
+
+      </div>
+    </section>
+  </main>
+  <footer class="footer">
+
+    <div class="footer-container">
+
+      <ul class="footer-list">
+
+        <li><a href="#" target="_blank"><img src="./img/linkedin-icon.svg" alt="icone linkedin">Elias Colina</a></li>
+  
+        <li><a href="#" target="_blank"><img src="./img/linkedin-icon.svg" alt="icone linkedin">Gabriel Dias</a></li>
+  
+        <li><a href="https://www.linkedin.com/in/gabrielbrta/" target="_blank"><img src="./img/linkedin-icon.svg" alt="icone linkedin">Gabriel Correa</a></li>
+      </ul>
+      <ul class="footer-list">
+  
+        <li><a href="https://github.com/Eliascolin" target="_blank"><img src="./img/github-icon.svg" alt="icone Github">Elias Colina</a></li>
+  
+        <li><a href="#" target="_blank"><img src="./img/github-icon.svg" alt="icone Github">Gabriel Dias</a></li>
+  
+        <li><a href="https://github.com/Gabrielbrta" target="_blank"><img src="./img/github-icon.svg" alt="icone Github">Gabriel Correa</a></li>
+      </ul>
+
+    </div>
+
+    
+  </footer>
 </body>
+
 </html>
